--- a/front/pizzaria/src/app/external/login-page/login-page.component.html
+++ b/front/pizzaria/src/app/external/login-page/login-page.component.html
@@ -2,7 +2,7 @@
   <div class="login-box">
     <div class="title">
       <img src="../../../assets/logo.png" width="200">
-      <h1>Pizzaria dos Mendes</h1>
+      <h1>Rei da Pizza</h1>
     </div>
     <form
       novalidate
