--- a/front/pizzaria/src/styles.scss
+++ b/front/pizzaria/src/styles.scss
@@ -79,5 +79,7 @@ $theme: mat-light-theme($palette-primary, $palette-accent);
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+@import '~ngx-toastr/toastr';
+
+html, body { height: 100%; background-color: bisque;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
